<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_fondo"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/color_de_los_fragmentos"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/iv_sexo"
            android:layout_width="145sp"
            android:layout_height="133sp"
            android:layout_marginTop="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/empty"/>

        <TextView
            android:id="@+id/nombre_completo"
            android:layout_width="319sp"
            android:layout_height="31sp"
            android:layout_marginTop="8dp"
            android:shadowColor="#8a6603"
            android:shadowDx="3"
            android:shadowDy="2"
            android:shadowRadius="0.6"
            android:text=""
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_sexo" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginTop="12dp"
            android:text="@string/sedad"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.205"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombre_completo" />

        <TextView
            android:id="@+id/tv_edad"
            android:layout_width="65sp"
            android:layout_height="20sp"
            android:layout_marginTop="10sp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/color_redconectado"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.207"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginTop="12dp"
            android:text="@string/ssexo"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.792"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombre_completo" />

        <TextView
            android:id="@+id/tv_sexo"
            android:layout_width="81dp"
            android:layout_height="24dp"
            android:layout_marginTop="10dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/color_redconectado"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.82"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/sinstitucion"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_edad" />

        <TextView
            android:id="@+id/tv_institucion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text=""
            android:textColor="@color/color_redconectado"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="36sp"
            android:layout_marginTop="8dp"
            android:text="@string/sidentificador"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_institucion" />

        <TextView
            android:id="@+id/tv_identificador"
            android:layout_width="110sp"
            android:layout_height="33sp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/color_redconectado"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/sconectadoa"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_identificador"
            app:layout_constraintVertical_bias="0.195" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="Ip Address: "
            android:textAlignment="center"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.156"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/red_conectado"
            android:layout_width="200sp"
            android:layout_height="22sp"
            android:layout_marginBottom="10sp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/color_redconectado"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.976"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_identificador"
            app:layout_constraintVertical_bias="0.197" />

        <TextView
            android:id="@+id/red_ip"
            android:layout_width="200sp"
            android:layout_height="22sp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/color_redconectado"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.924"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/red_conectado" />

        <Button
            android:id="@+id/btn_cerrar_sesion"
            android:layout_width="127dp"
            android:layout_height="47dp"
            android:background="@drawable/boton_fragmento_salida"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="Cerrar Sesión"
            android:textColor="@drawable/color_btn_fragmento_salida"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/red_ip"
            app:layout_constraintVertical_bias="0.422" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>